--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,17 @@ footer {
   bottom: 0;
   background: #27120e;
 }
+.imagem-chocolates{
+  max-width: 250px;
+  max-height: 170px;
+  margin-top: 30px;
+  transform: scale(1.1);
+  transition: transform 0.3s ease;
 
+}
+.imagem-chocolates:hover{
+  transform: scale(1.05);
+}
 #root {
   max-width: 1280px;
   margin: 12vh auto 12vh auto; 
