--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 500;
-  color: #ffa704;
+  color: #eb8f06;
   text-decoration: inherit;
 }
 a:hover {
-  color: white;
+  color: #eb8f06; 
 }
 
 body {
@@ -31,13 +31,13 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 2.5em;
   line-height: 1.1;
 }
 
 button {
   border-radius: 8px;
-  border: 1px solid;
+  border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
@@ -56,7 +56,7 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #ffffff;;
+    color: #ffffff;
     background-color: #ffffff;
   }
   a:hover {
@@ -65,4 +65,8 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+img{
+  width: 350px;
 }
