--- a/src/index.css
+++ b/src/index.css
@@ -25,9 +25,11 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  justify-content: center;
+  align-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: #a5471fda;
 }
 
 h1 {
@@ -67,6 +69,40 @@ button:focus-visible {
   }
 }
 
+form{
+  display:flex;
+  flex-direction:column;
+  border: 1px solid black;
+  padding: 2em;
+  box-shadow: 0 0 10px rgba(0,0,0,0.1);
+  background-color: #a5471fda;
+}
+form>div{
+  display:flex;
+  flex-direction:column;
+  align-items: flex-start;
+  margin-bottom: 1em;
+}
+form>div>input{
+  width: 100%;
+  padding: 0.5em;
+  box-sizing: border-box;
+  outline: none!important;
+  border-radius: 2px;
+  border: 1px solid #d0d0d0;
+}
+form>div>input:focus{
+  border: 1px solid #3740f9a5;
+}
+
+main{
+    width:60vw;
+    max-width: 100%;
+    margin:0 auto;
+    background: none;
+    height: auto;
+}
+
 img{
- width: 250px;
+  width: 350px;
 }
